[package]
name = "gibbername-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
argh = "0.1.10"
env_logger = "0.11.3"
futures-lite = "1.12.0"
gibbername = { path = "../gibbername" }
log = "0.4.21"
# melprot = "0.13.7"
melprot = {path = "../melprot"}
melstructs = "0.3.2"
